--- a/fdphd.bib
+++ b/fdphd.bib
@@ -941,6 +941,16 @@ j%% TODO understand what this is about
   year={1997},
   publisher={IOP Publishing}
 }
+@article{chakrabarti2012magnetic,
+  title={Magnetic response of split ring resonator metamaterials: From effective medium dispersion to photonic band gaps},
+  author={Chakrabarti, Sangeeta and Ramakrishna, S Anantha},
+  journal={Pramana},
+  volume={78},
+  number={3},
+  pages={483--492},
+  year={2012},
+  publisher={Springer}
+}
 
 
 % perhaps answers the question of magnetic dipole moment not contributing to static permeability "mu ~ OMEGA*f / (omega**2-omega0**2)"
