--- a/conclusion.tex
+++ b/conclusion.tex
@@ -21,7 +21,6 @@
 % 	(the base line is that many concepts are not as novel as they may appear, and that modern papers
 %	often fail to cite the author of the original idea)
 %  * filled the demand for some starting overview of the common structures
-%  * stress the importance of taking the spatial dispersion into account
 %  * unification of MM and PhC concepts
 %  * attempt for clarification of these two terms
 %  * pointed out the fundamental problems: 
@@ -29,11 +28,13 @@
 %      2) excessive spatial dispersion in known structures
 %      3) the s-parameter method, although widely used, does not always give correct results
 %  * illustrated the difference of these results against CDH
+%  * stress the importance of taking the spatial dispersion into account
 %  * provide the simulation environment which facilitates correct computations, 
 %    and solves the phase-ambiguity in the s-parameter method in particular
 
 %% NOTES: What WAS NOT discussed in the thesis -- Things that could be pursued further on the basis of the presented work:
 %% * quasicrystals and disorder, 
+%  * plasmonic nanoparticles (and related MMs at optical frequencies?)
 %% * chiral media, bianisotropy and gyrotropy, 
 %			Further, also the effects of more general properties of the constituent materials could be investigated, but this would require expanding the source code of the FDTD simulation library used (i.e., MEEP). While anisotropy and optical activity would be welcome, the particularly interesting option is gyrotropy, i.e. non-hermitian form of the permittivity or permeability tensors  that breaks time-reversal symmetry. This would open the wide research possibilies of non-reciprocal metamaterial devices.
 %% * structures with nonlinearity or loss,    
